# contact_card_reader

./: .cursorrules  .gitignore  INSTALL.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.cursor/: project_plan.md
src/contact_card_reader/: __init__.py  cli.py  image_loader.py  main.py
