[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contact-card-reader"
version = "1.0.0"
description = "A CLI application that extracts text from contact card images using OCR"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Maximilian Ofir"}
]
keywords = ["ocr", "contact-card", "text-extraction", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "opencv-python",
    "Pillow",
    "pytesseract",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
contact-card-reader = "contact_card_reader.cli:main"

[project.urls]
Homepage = "https://github.com/maximilianofir/contact_card_reader"
Repository = "https://github.com/maximilianofir/contact_card_reader"
Issues = "https://github.com/maximilianofir/contact_card_reader/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
